--- a/sites/all/themes/philanthropy_theme/sass/_philanthropy-custom.scss
+++ b/sites/all/themes/philanthropy_theme/sass/_philanthropy-custom.scss
@@ -1355,6 +1355,7 @@ div {
   }
   .sml-drop {
     div {
+      margin-top:17px;
       float: left;
       width: 18px;
       height: 18px;
